--- a/MyGame/GameLib/GameLib.vcxproj
+++ b/MyGame/GameLib/GameLib.vcxproj
@@ -140,9 +140,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="GameLib.h" />
+    <ClInclude Include="Piece.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameLib.cpp" />
+    <ClCompile Include="Piece.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
