--- a/MyGame/GameLib/GameLib.vcxproj.filters
+++ b/MyGame/GameLib/GameLib.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClInclude Include="GameLib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Piece.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameLib.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Piece.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
