--- a/MyGame/GameLib/GameLib.vcxproj
+++ b/MyGame/GameLib/GameLib.vcxproj
@@ -141,10 +141,12 @@
   <ItemGroup>
     <ClInclude Include="GameLib.h" />
     <ClInclude Include="Piece.h" />
+    <ClInclude Include="Rook.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameLib.cpp" />
     <ClCompile Include="Piece.cpp" />
+    <ClCompile Include="Rook.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
