--- a/GameLib/GameTest/GameTest.vcxproj.filters
+++ b/GameLib/GameTest/GameTest.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)src\gmock\gmock-all.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
