--- a/GameLib/GameLib/GameLib.vcxproj.filters
+++ b/GameLib/GameLib/GameLib.vcxproj.filters
@@ -120,7 +120,7 @@
       <Filter>Header Files\API</Filter>
     </ClInclude>
     <ClInclude Include="PieceInfo.h">
-      <Filter>Header Files\API</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
