--- a/GameLib/GameLib/GameLib.vcxproj.filters
+++ b/GameLib/GameLib/GameLib.vcxproj.filters
@@ -95,7 +95,7 @@
     <ClInclude Include="Pawn.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="IException.h">
+    <ClInclude Include="ChessException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MoveException.h">
