--- a/GameLib/GameLib/GameLib.vcxproj.filters
+++ b/GameLib/GameLib/GameLib.vcxproj.filters
@@ -60,6 +60,15 @@
     <ClCompile Include="PieceInfo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ChessException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DoesntExistException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TurnException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -120,6 +129,12 @@
       <Filter>Header Files\API</Filter>
     </ClInclude>
     <ClInclude Include="PieceInfo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DoesntExistException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TurnException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
