Split exceptions in two headers: GameExceptions and BoardExceptions.

--- a/GameLib/GameLib/GameLib.vcxproj.filters
+++ b/GameLib/GameLib/GameLib.vcxproj.filters
@@ -155,5 +155,11 @@
     <ClInclude Include="StillCheckException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameExceptions.h">
+      <Filter>Header Files\API</Filter>
+    </ClInclude>
+    <ClInclude Include="BoardExceptions.h">
+      <Filter>Header Files\API</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
