--- a/GameLib/GameLib/GameLib.vcxproj.filters
+++ b/GameLib/GameLib/GameLib.vcxproj.filters
@@ -162,7 +162,7 @@
       <Filter>Header Files\API</Filter>
     </ClInclude>
     <ClInclude Include="EState.h">
-      <Filter>Header Files\API</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
