--- a/GameLib/GameLib/GameLib.vcxproj.filters
+++ b/GameLib/GameLib/GameLib.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="DrawProposedException.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PromoteException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -168,6 +171,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DrawProposedException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PromoteException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
