Added MainFunctions header.

--- a/GameLib/GameConsole/GameConsole.vcxproj
+++ b/GameLib/GameConsole/GameConsole.vcxproj
@@ -152,6 +152,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleMain.cpp" />
+    <ClCompile Include="MainMethods.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MainMethods.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
