--- a/GameLib/GameConsole/GameConsole.vcxproj.filters
+++ b/GameLib/GameConsole/GameConsole.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="ConsoleMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MainMethods.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MainMethods.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
