--- a/GameLib/GameLib/GameLib.vcxproj
+++ b/GameLib/GameLib/GameLib.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameExceptions.h" />
     <ClInclude Include="IGame.h" />
+    <ClInclude Include="IGameListener.h" />
     <ClInclude Include="InTheWayException.h" />
     <ClInclude Include="IPiece.h" />
     <ClInclude Include="IPieceInfo.h" />
