Implemented weak pointer observer.

--- a/GameLib/GameLib/GameLib.vcxproj.filters
+++ b/GameLib/GameLib/GameLib.vcxproj.filters
@@ -176,5 +176,8 @@
     <ClInclude Include="PromoteException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IGameListener.h">
+      <Filter>Header Files\API</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
