Changed restart function and implemented IsPromotePossible.

--- a/GameLib/GameLib/GameLib.vcxproj
+++ b/GameLib/GameLib/GameLib.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="DoesntExistException.h" />
     <ClInclude Include="DrawProposedException.h" />
     <ClInclude Include="EColor.h" />
+    <ClInclude Include="EOverState.h" />
     <ClInclude Include="EPieceType.h" />
     <ClInclude Include="ChessException.h" />
     <ClInclude Include="EState.h" />
