--- a/GameLib/GameTest/GameTest.vcxproj
+++ b/GameLib/GameTest/GameTest.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="BoardTest.cpp" />
     <ClCompile Include="GameTest.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="GameMock.cpp" />
     <ClCompile Include="PieceTest.cpp" />
   </ItemGroup>
   <ItemGroup>
