--- a/GameLib/GameLib/GameLib.vcxproj
+++ b/GameLib/GameLib/GameLib.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="Knight.cpp" />
     <ClCompile Include="MoveException.cpp" />
     <ClCompile Include="Pawn.cpp" />
+    <ClCompile Include="PGNException.cpp" />
     <ClCompile Include="Piece.cpp" />
     <ClCompile Include="PieceInfo.cpp" />
     <ClCompile Include="PositionException.cpp" />
@@ -191,6 +192,7 @@
     <ClInclude Include="Knight.h" />
     <ClInclude Include="MoveException.h" />
     <ClInclude Include="Pawn.h" />
+    <ClInclude Include="PGNException.h" />
     <ClInclude Include="Piece.h" />
     <ClInclude Include="PieceInfo.h" />
     <ClInclude Include="Position.h" />
