--- a/GameLib/GameLib/GameLib.vcxproj.filters
+++ b/GameLib/GameLib/GameLib.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="PGNException.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FENException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -177,6 +180,9 @@
       <Filter>Header Files\API\Exceptions</Filter>
     </ClInclude>
     <ClInclude Include="PGNException.h">
+      <Filter>Header Files\API\Exceptions</Filter>
+    </ClInclude>
+    <ClInclude Include="FENException.h">
       <Filter>Header Files\API\Exceptions</Filter>
     </ClInclude>
   </ItemGroup>
