--- a/GameLib/GameTest/GameTest.vcxproj.filters
+++ b/GameLib/GameTest/GameTest.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="GameMock.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PGNTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
