--- a/GameLib/GameLib/GameLib.vcxproj
+++ b/GameLib/GameLib/GameLib.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="ChessTimer.cpp" />
     <ClCompile Include="DoesntExistException.cpp" />
     <ClCompile Include="FENException.cpp" />
+    <ClCompile Include="FileUtils.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="InTheWayException.cpp" />
     <ClCompile Include="King.cpp" />
@@ -186,6 +187,7 @@
     <ClInclude Include="ChessException.h" />
     <ClInclude Include="EState.h" />
     <ClInclude Include="FENException.h" />
+    <ClInclude Include="FileUtils.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameExceptions.h" />
     <ClInclude Include="IGame.h" />
