Added position struct and further refactor.

--- a/GameLib/GameLib/GameLib.vcxproj
+++ b/GameLib/GameLib/GameLib.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="PGNHandler.cpp" />
     <ClCompile Include="Piece.cpp" />
     <ClCompile Include="PieceInfo.cpp" />
+    <ClCompile Include="Position.cpp" />
     <ClCompile Include="PositionException.cpp" />
     <ClCompile Include="PromoteException.cpp" />
     <ClCompile Include="Queen.cpp" />
